Leave 15px space on left and right side to avoid overlapping with togglers

--- a/src/web/components/widgets/visualizer/index.styl
+++ b/src/web/components/widgets/visualizer/index.styl
@@ -47,8 +47,8 @@
             position: absolute;
             top: 0;
             bottom: 0;
-            left: 0;
-            right: 0;
+            left: 15px;
+            right: 15px;
 
             // Centering in the Unknown
             // https://css-tricks.com/centering-in-the-unknown/
